--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -194,22 +194,49 @@ Traceroute acontece 3x.
 Quando mand todos os segmentos.
 ICMP retorna um erro (unreachable).
 
-## DHCP
+## DHCP - Dynamic Host Configuration Protocol
+
+Faz com que um utilizador receba um endereço IP e que não existam dois iguais assim que se junta à rede.
 
 Obtém endereços IP através de um network server.
 
+São usados 4 comandos para a comunicação:
+
+- `DHCP discover` - O cliente envia este comando para o endereço de _broadcast_ da rede (último _host_ da subrede);
+- `DHCP offer` - O servidor de DHCP recebe o pedido e responde com um endereço IP;
+- `DHCP request` - O cliente vê o IP que lhe pode ser atribuído e pede-o ao servidor (ainda em _broadcast_);
+- `DHCP ACK` - O servidor regista o endereço na sua base de dados e avisa o cliente que pode ficar com ele.
+
 O que acontece:
 
-Host broadcast "DHCP discover" (pede IP).
-DHCP server responde "DHCP offer"
-Host pede IP add "DHCP request".
-DHCP manda add "DHCP ACK".
+1. Host broadcast "DHCP discover" (pede IP).
+2. DHCP server responde "DHCP offer"
+3. Host pede IP add "DHCP request".
+4. DHCP manda add "DHCP ACK".
 
-#### Adress leasing
+Porta 68 do lado do cliente.
+Porta 67 do lado do servidor.
+#### Address leasing
 
-- T1 time (50% of Leasing Time) - tempo depois de um terminal tentar __renew__ o add leasing.
-- T2 time (85%) - fazer o anterior de novo se o primeiro falhar.
-- Lease Time - tempo depois de um terminal parar de usar o lease address se não for renovado no meantime.
+Os IPs não ficam associados para sempre a um host.
+Passado esse tempo, o host deixa o endereço e pede um novo fazendo de novo o processo DHCP.
+
+Contudo, o cliente pode pedir para renovar o endereço IP. Tal pode ser efetuado nos seguintes momentos:
+
+- 50% do _Lease Time_ - O cliente pede ao servidor DHCP para renovar o endereço IP;
+- 85% do _Lease Time_ - Se o pedido anterior não foi aceite, o cliente volta a fazer o pedido.
+- 100% do _Lease Time_ - Se o pedido anterior não foi aceite, o cliente volta a fazer o pedido.
+
+Nesta renovação (renew), não é necessário fazer de novo o _discover / offer_ dado que já se sabe a que servidor DHCP queremos fazer o pedido. 
+Só no caso de ser recusado é que se volta a iniciar o processo.
+
+## Endereços privados
+
+Existem 3 gamas:
+
+- 10.0.0.0
+- 172.16.0.0
+- 192.168.0.0
 
 ## Network Address Translation ( NAT )
 
