--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -238,13 +238,20 @@ Existem 3 gamas:
 - 172.16.0.0
 - 192.168.0.0
 
+No caso destes pode haver vários para ocasiões diferentes. Este endereço pode existir para um servidor DHCP, num computador pessoal, ...
+Já por exemplo 11.0.0.1 é público então tem apenas um host e qualquer pessoa pode comunicar com ele.
+
 ## Network Address Translation ( NAT )
+
+Mapeia um endereço público para vários endereços privados, através de portos.
 
 Permite que uma rede local use endereços privados para comunicar.
 Para comunicar para fora usa endereços globais.
 Endereços locais são insivíeis -> + segurança.
 
 NAT é que faz esta tradução dos endereços.
+
+O mapeamento é guardado na **NAT _translation table_**, guardando entradas do tipo (`IpRouter`, `PortoRouter`, `IpPrivado`, `PortoPrivado`), ou seja, quando um pacote for recebido no endereço `IpRouter` para o porto `PortoRouter`, o router irá convertê-lo para o IP `IpPrivado` e para o porto `PortoPrivado`.
 
 Todos os dispositivos dentro de uma rede local partilham apenas um endereço IPv4.
 
@@ -256,9 +263,56 @@ addresses deviam ser resolvidos pelo IPv6.
 
 - Solução 1: encaminhar para endereço publico para privado.
 
-- Solução 2: ___UPnP (Universal Plug and Play) ___e protocolo IGD (Internet Gateway Device)___: ?
+- Solução 2: ___UPnP (Universal Plug and Play) e protocolo IGD (Internet Gateway Device)___: permite que um _host_ da rede aprenda o endereço IP público do _router_ e adicione/remova mapeamentos de porta com prazos de locação, automatizando a configuração de mapa de porta NAT estático.
 
 - Solução 3: ___Relaying___: cliente NAT estabelece ligação com o _Relay_, funcionando como intermediário. Cliente externo conecta-se ao _relay_ e encaminha pacotes entre as duas conexões.
+
+## IPv6
+
+Mudanças:
+
+- Verificação de erros deixa de existir, com fibra ótica o processamento passou para as extremidades da rede.
+- A funcionalidade de fragmentação ficou para a quem envia os pacotes. Tira peso aos routers.
+- Todos os routers têm de conseguir enviar no mínimo 1280 bytes em cada pacote.
+
+Não existe _Checksum_ para reduzir o tempo de processamento em cada loop.
+
+___ICMPv6___ - mais mensagens como "_Packet too Big_".
+
+Aqui no IPv6 não existe fragmentação.
+Mínimo MTU = 1280 bytes.
+
+Hosts IPv6 são necessários para determinar o caminho MTU antes de enviar os packets.
+
+Para mandar um packet maior que o caminho MTU divide-se o packet em fragmentos.
+
+___Double Stack___: Alguns routers traduzem entre IPv4 e IPv6. Quando se altera de 6 para 4, o IPv6 Header é perdido.
+
+___Tunneling___: o IPv6 é transportado como _payload_ num datagrama IPv4 entre routers IPv4. O tunneling envolve o encapsulamento do datagrama IPv6 num datagrama IPv4 para permitir que ele seja encaminhado por uma rede IPv4.
+
+
+# Routing
+
+Routers conectados a uma ___SDN (Software Defined Network)___. 
+Esta faz o cálculo das rotas e contrói as _Forwarding Tables_ e assim os routers só se preocupam com o encaminhamento.
+
+MAS, quando não acontece têm de ser os routers a construir as _Forwarding Tables_. Usa-se Grafos e aplicando pesos a cada ligação aplicam-se os algoritmos já conhecidos.
+
+Existem duas classes de algoritmos:
+
+**Globais vs Descentralizados**
+
+- **Globais** - os _routers_ sabem a topologia completa de rede e o custo de ligação (algoritmos _Link State_);
+- **Descentralizados** - os _routers_ comunicam apenas com os vizinhos, em processos iterativos de computação (algoritmos _Distance Vector_).
+
+**Estáticos vs Dinâmicos**
+
+- **Estáticos** - As rotas variam muito pouco ao longo do tempo;
+- **Dinâmicos** - As rotas variam com frequência, o que implica atualizações periódicas devido a alterações de custo.
+
+
+
+
 
 
 
