--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -310,9 +310,109 @@ Existem duas classes de algoritmos:
 - **Estáticos** - As rotas variam muito pouco ao longo do tempo;
 - **Dinâmicos** - As rotas variam com frequência, o que implica atualizações periódicas devido a alterações de custo.
 
+## Algoritmos _Link State_
+
+É conhecido o estado total da rede.
+Usa-se Dijkstra.
+Com uso deste obtemos a árvore de caminhos mais curtos.
+
+## Algoritmo _Distance Vector_
+
+Comunicação apenas feita com vizinhos.
+Usa-se Bellman-Ford.
+Cada router assim sabe o custo do caminho para se ligar aos vizinhos e o custo que os vizinhos já têm acumulado.
+
+Cada nó envia em tempo a sua estimatica de _distance vector_ aos vizinhos.
+Estes atualizam o seu próprio _distance vector_ usando a equação de Bellman-Ford.
+
+# Sistemas Autónomos
+
+Se os _routers_ não forem identicosm uma solução é o _routing_ hierarquico, onde routers são juntos em regiões ___AS___:
+- Os _routers_ dentro do mesmo AS executam o mesmo protocolo de _routing_ (protocolo ___Intra-AS).
+- Os _routers_ em diferentes AS podem executar-se em diferentes intra-AS, desde que comuniquem com os ___inter-AS___.
+
+#### Hierarquical Routing
+
+Entrega feita ao AS e este faz a entrega à rede de destino.
+
+Tamanho das tabelas de _routing_ pode ser reduzido.
+
+### Protocolos de routing Intra-AS
+
+Protocolos ___IGP (Interior Gateway Protocol)___ são os protoclos de comunicação dentro do AS.
+
+Temos:
+
+- **RIP** - _Routing Information Protocol_;
+- **OSPF** - _Open Shortest Path First_;
+- **IGRP** - _Interior Gateway Routing Protocol_ (Proprietário da Cisco).
 
 
+#### RIP
+
+Usa _Distance Vector_ emq ue a distância é a medida dos _hops_ (número de saltos) entre as redes, sendo 16 o número máximo de saltos.
+
+Os _distance vectors_ são partilhados em intervalos de 30s com os vizinhos através de um ___advertisement___.
+
+O RIP possui uma tabela de roteamento que é atualizada periodicamente com base em informações recebidas de outros routers na rede.
+Se um router não receber mensagens de um vizinho por 180 segunso considera falha na conexão e atualiza a tabela de roteamento.
+
+RIP usa técnica de "envenenamento reverso" para envitar loops de roteamento.
+Mensagens de roteamento enviadas em pacotes UDP na porta 250.
+
+#### OSPF
+
+Usa _Link State_ e permite ter uma relação hierárquica. Pode ter ASs dentro de ASs.
 
 
+#### RIP vs OSPF
+
+RIP é mais apropriado para redes mais pequenas:
+- + fácil de implementar.
+- 15 hops não éum problema de redes pequenas.
+- Faz sentido usar Distance Vector.
+
+OSPF é mais escalável:
+- Funciona com redes de qualquer dimensão.
+- Mais eficiente em redes maiores.
+- Pela dimensão faz sentido usar Link State.
+
+### BGP - Outro protocolo Inter-AS (Border Gateway Protocol)
+
+Ele permite que uma subrede anuncie a sua existência e os destinos que ela pode alcançar para o resto da Internet.
+
+O BGP fornece a cada AS:
+
+- uma maneira de obter informações de alcançabilidade de subredes de ASs vizinhos, através do **eBGP** (_External BGP_);
+- uma maneira de propagar essas informações para todos os routers internos do AS, através do **iBGP** (_Internal BGP_);
+- mecanismos para determinar "boas" rotas para outras redes com base nas informações de alcançabilidade e políticas.
+
+##### Básicos de BGP
+
+- Sessão de BGP - Pares de routers BGP trocam mensagens BGP numa conexão TCP semi-permanente;
+- Mensagens BGP - Existem quatro mensagens que podem ser trocadas:
+    - `OPEN`: abre uma conexão TCP para outro router BGP;
+    - `UPDATE`: avisa a existência de um novo caminho ou remove antigo;
+    - `KEEPALIVE`: avisa que a ligação ainda se mantém ativa, por não terem existido _updates_;
+    - `NOTIFICATION`: avisa que existiram erros na última mensagem ou avisa que a conexão é para ser fechada.
 
 
+# Broadcast
+
+Objetivo é enviar pacote para todos os outros nós da rede.
+
+Problema:
+
+![[0004-broadcastLoop.svg]]
+
+
+Este problema em cima chama-se ___Flooding___.
+
+Para o resolver, um nó só faz _broadcast_ de um pacote, se ainda não fez _broadcast_ desse mesmo pacote (Os _routers_ guardam os identificadores dos pacotes) - **_Controlled Flooding_**.
+
+Outra alternativa seria construir uma **Spanning Tree** - árvore que cobre todos os _routers_ com o menor número de ligações e sem _loops_.
+
+# Multicast
+
+O objetivo de um _multicast_ é uma mensagem ser entregue a um grupo de destinatários específico.  
+Para isso, podem-se criar _Spanning Trees_ que permitam ligar todos os destinatários.
