--- a/obsidian/RC/3. Transport Layer.md
+++ b/obsidian/RC/3. Transport Layer.md
@@ -143,6 +143,153 @@ números de pacotes / 2 menor que tamanho de janela.
 
 O emissor e recetor têm uma Sliding Window e estes apenas avançam quando o pacote mais antigo for ACK.
 
+# TCP
+
+- **Point-to-Point** - Apenas um emissor e um recetor;
+- **Sliding Window** - Implementa a noção de Sliding Window, apresentada anteriormente;
+- **Dados Full Duplex** - Na mesma conexão, é permitido enviar dados nos dois sentidos;
+- **Orientado a conexão** - Implementa uma conexão, ou seja, dois hosts conhecem-se (vs. o UDP, em que o recetor recebe informação de vários emissores sem estabelecer uma conexão).
+- **Controlo de Flow** - O emissor consegue controlar a quantidade de dados enviados, caso o cliente não consiga processar tudo.
+
+![[Pasted image 20240109115031.png]]
+
+
+- **Número de sequência** - conta o número de bytes enviados, desde o inicio da conexão. É igual ao n-ésimo byte já enviado pelo dado _host_ incrementado por uma unidade (correspondente ao primeiro byte enviado deste segmento);
+- **Número de ACK** - número de sequência do byte seguinte que se espera receber. Este indica que foram recebidos os dados acumulados até este ACK (ou seja, todos os ACKs anteriores chegaram) e que se pretende receber os dados associados a este ACK.
+- **Bit A** - diz se o segmento é um ACK;
+- **_len cab_** - tamanho do cabeçalho;
+- **Janela de Receção** - número de bytes que recetor consegue receber;
+- **Bit R, S, F** - diz se o segmento é um RST, SYN ou FIN;
+- **Bit E e Bit C** - notificação de congestão na rede.
+
+### Three Way HandShake - Estabelecer Ligação
+
+Antes de serem transmitidos dados, o emissor e o recetor criam uma conexão, através do Three Way Handshake:
+
+1. O cliente envia um segmento **SYN** para o servidor, indicando o número de sequência inicial;
+2. O servidor responde com um **SYN ACK**, indicando o seu número de sequência inicial. Aqui, o servidor aloca buffers.
+3. O cliente responde com um **ACK**, podendo já enviar dados com este segmento.
+
+Para terminar a conexão,
+
+1. O cliente envia um segmento **FIN** para o servidor;
+2. O servidor responde com um **ACK** e começa a fechar a conexão;
+3. O servidor, depois de fechar completamente a conexão, responde com um **FIN**;
+4. O cliente responde ao **FIN** recebido com um **ACK**. Mesmo depois de receber o **FIN**, como os pacotes podem não chegar por ordem, o socket não é fechado imediatamente pois ainda podem chegar pacotes.
+5. o servidor recebe o **ACK**, que confirma que a conexão foi totalmente (dos dois lados) fechada.
+
+## Timeout
+
+Cada segmento tem que ter um dado tempo para, caso esse tempo seja passado e não seja obtida resposta, podermos considerar o segmento como perdido. A esse tempo chama-se **timeout**.
+
+O tempo de timeout tem que ser maior do que o RTT e, portanto, é necessário saber o tempo de RTT.  
+É possível estimar este valor fazendo a diferença entre o tempo de emissão de um segmento e da receção do respetivo ACK. A este tempo chama-se SampleRTT (visto ser uma amostra do tempo possível).
+
+Contudo, uma amostra do tempo não é suficiente, visto que a rede, nesse instante, podia estar instável e não representar a realidade.  
+Então, alternativamente, calcula-se o EstimatedRTT, que é uma média de vários ⁡SampleRTTs.
+
+Alternativamente a esses tempos, pode-se ainda calcular o EstimatedRTT=(1−α)×EstimatedRTT+α×SampleRTT (tipicamente, α=0.125). A esta fórmula chama-se **EWMA** (_Exponential Weighted Moving Average_), e com ela, a influência das amostras anteriores diminui exponencialmente.
+
+## Envio de um Segmento
+
+O _flow_ de envio de dados é o seguinte:
+
+1. criar um segmento;
+2. definir o número de sequência como o primeiro byte de dados deste segmento. Por exemplo,
+    - se for o primeiro segmento a ser enviado, o número de sequência será 1;
+    - se já tiverem sido enviados 1000 bytes, o número de sequência será 1001.
+3. Enviar o segmento e começar um _timer_.
+4. Se o _timer_ passar e não tiver sido recebida uma confirmação, reenvia-se o segmento que causou o _timeout_. O tempo de espera é dobrado para evitar timeouts prematuros de segmentos seguintes.
+5. É recebido um ACK, confirmando todos os segmentos enviados até ao valor do ACK.  
+    Se os segmentos ainda não estavam confirmados, são agora confirmados. Recomeça o _timer_, se ainda existirem outros segmentos por confirmar.
+
+Apesar de existir o _timeout_, o período de espera é relativamente longo. Uma solução para isso é fazer uma **retransmissão rápida** - assume-se que se existirem 3 ACKs duplicados, deve-se retransmitir imediatamente.
+
+Note-se que, se algum segmento não tiver chegado, o servidor irá sempre responder com ACKs até esse segmento, mesmo que entretanto cheguem segmentos posteriores, pois o ACK, em TCP, representa que todos os segmentos até ao seu número foram recebidos com sucesso. Por exemplo,
+
+1. O cliente envia um segmento com número = 1.
+2. O servidor responde com ACK = 2 (recebeu tudo até 2 e quer receber o 2).
+3. O cliente envia um segmento com número = 2.
+4. O servidor responde com ACK = 3.
+5. O cliente envia um segmento com número = 3. **O Pacote perde-se**.
+6. O cliente envia um segmento com número = 4.
+7. O servidor responde com ACK = 3 (Apesar de ter recebido o segmento 4, o servidor só pode responder com 3 pois o ACK é acumulativo, ou seja, só recebeu tudo até ao 2).
+8. O cliente envia um segmento com número = 5.
+9. O servidor responde com ACK = 3.
+10. O cliente envia um segmento com número = 6.
+11. O servidor responde com ACK = 3.
+12. O cliente recebe 3 ACKs repetidos e então retransmite o segmento 3.
+13. O servidor responde com ACK = 7 (Recebeu todos os pacotes até ao 6 e pode receber o 7).
+
+### Controlo de Fluxo
+
+Um dos objetivos do TCP é assegurar que a transmissão não é feita rápido de mais, ou seja, que o recetor consegue processar todos os dados de um segmento antes de receber o seguinte.
+
+O recetor tem um **_buffer_ de receção** - _buffer_ para onde vão os dados que vão sendo recebidos através de TCP.  
+Uma forma de controlar o fluxo é o recetor avisar o espaço livre que tem no _buffer_ a cada ACK enviado para o emissor através do cabeçalho [Janela de Receção](https://resumos.leic.pt/rc/transporte/#estrutura-de-um-segmento-tcp). Desta forma, é garantido que não existirá overflow de dados.
+
+Para conseguir controlar a congestão, existem duas soluções para o problema: **Controlo através da rede** e **Controlo end-end**:
+
+### Controlo através de Rede
+
+Nesta solução, os _routers_ dão feedback direto aos _hosts_, informado quão congestionada a rede está.  
+O feedback é passado pelos vários _routers_ até chegar ao _host_ final e, com esse feedback, os emissores podem reduzir o seu ritmo.
+
+Esse feedback é passado [nos bits E e C do _header_ de um segmento de TCP](https://resumos.leic.pt/rc/transporte/#estrutura-de-um-segmento-tcp).
+
+### Controlo end-end - AIMD
+
+Nesta solução, não existe um feedback explicito da rede. Em vez disso, a congestão é inferida através do _delay_ e das perdas de pacotes observadas.
+
+No caso do TCP, usa-se um algoritmo de **AIMD** (_Additive Increase/Multiplicative Decrease_), onde os emissores começam com um ritmo base e vão aumentado esse ritmo aos poucos.  
+Se, à medida que o ritmo vai aumentando, existir uma perda (o que significa que o canal está a ficar mais congestionado), então a velocidade é reduzida drasticamente.
+
+Detalhadamente, os aumentos são de dois tipos, baseados num _threshold_:
+
+- Se a velocidade estiver abaixo do _threshold_, os aumentos são exponenciais - duplicando a velocidade a cada envio;
+- Se, com um aumento, a velocidade passar desse _threshold_, o aumento passa a ser constante e de 1 segmento extra por envio.
+
+Em relação aos decréscimos:
+
+- São em metade de velocidade, caso seja detetado o [mesmo ACK três vezes](https://resumos.leic.pt/rc/transporte/#controlo-do-fluxo);
+- São para o mínimo possível - **1 MSS** (_Maximum Segment Size_), caso seja detetada uma perda.
+
+O valor do _threshold_ é um valor fixo quando a transmissão começa, mas, sempre que existe um decréscimo, o seu valor muda para metade da velocidade atual (antes desta ser reduzida).
+
+Resumidamente,
+
+- Quando uma conexão começa, a velocidade é a mais lenta possível - 1 MSS. A isto chama-se **_slow start_**.
+- Contudo, como a velocidade é muito inferior ao _threshold_, esta irá crescer exponencialmente até o alcançar. Depois disso, entra na fase de **_congestion-avoidance_**, onde o crescimento é linear.
+- Se o mesmo ACK for repetido três vezes, o _threshold_ é passado para metade da velocidade atual e a velocidade para metade;
+- Se existir um _timeout_, o _threshold_ é passado para metade da velocidade atual e a velocidade para 1 MSS.
+
+Olhando para um gráfico temporal que representa a velocidade de envio, este terá um aspeto de uma serra:
+
+![[Pasted image 20240109120555.png]]
+
+#### Estado de Fast Recovery
+
+Se forem detetados três ACKs duplicados antes da fase de **_congestion-avoidance_**, pode ser usado o estado de **Fast Recovery**, onde se tenta acelerar a recuperação enviando apenas os segmentos perdidos.
+
+Neste caso, a velocidade é incrementada em 1 por cada ACK duplicado recebido pelo segmento perdido que causou a entrada neste estado.
+
+Finalmente, depois do ACK que confirma a receção do segmento perdido, move-se para a fase de **_congestion-avoidance_**.
+
+##### [](https://resumos.leic.pt/rc/transporte/#varia%C3%A7%C3%B5es)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
